Refuse content that would hang the client or leave the pack
Four inputs reachable from an ordinary page could stop the client or step outside the
guide's own files.

- A chart bound or data value that is not finite is refused when the element is read:
  an infinite axis bound made the tick loops run forever.
- A replacement region is bounded on every side, so a mistyped extent cannot make the
  scene build walk billions of positions.
- A guide path that climbs to a parent directory is refused before any asset lookup,
  and a directory-backed pack resolves a resource only inside its own root.
- A page is only written inside the export directory, so a resource pack entry name
  cannot place a file elsewhere.
- A heading depth that is not a number no longer drops its page out of the export.
- A scene element compiler that cannot list its tags is reported instead of stopping
  every scene.